--- a/hellopage/templates/index.html
+++ b/hellopage/templates/index.html
@@ -38,6 +38,7 @@
       <div class="flex flex-col items-center py-12">
         <p class="text-lg items-center text-black-600">Favian Naufal - 2006597802</p>
         <p class="text-lg items-center text-gray-600">Deployment Task on 09.09.2023</p>
+        <p class="text-lg items-center text-gray-600">CI Implementation on 20.09.2023</p>
       </div>
     </footer>
 
